@@ -4,6 +4,9 @@ import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectCategory;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.dimension.DimensionDefaults;
 import net.neoforged.neoforge.registries.DeferredHolder;
 import org.confluence.terraentity.entity.boss.wallofflesh.WallOfFlesh;
 import org.confluence.terraentity.entity.boss.wallofflesh.WallOfFleshMouth;
@@ -14,7 +17,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 
-
 public class HorrifiedEffect extends MobEffect {
     private WallOfFlesh wall;
     public HorrifiedEffect() {
@@ -23,10 +25,10 @@ public class HorrifiedEffect extends MobEffect {
 
     @Override
     public boolean applyEffectTick(LivingEntity living, int amplifier) {
-        if(wall !=null) {
-            if(!living.getBoundingBox().intersects(wall.getOutsideCollisionBox())&&!living.getBoundingBox().intersects(wall.getInsideBox())||living.level().dimension()!=(wall.level().dimension())){
+        if (wall != null && wall.isAlive() && (!(living instanceof Player) || (living instanceof Player player && !player.isCreative() && !player.isSpectator()))){
+            if(!living.getBoundingBox().intersects(wall.getOutsideBox())&&!living.getBoundingBox().intersects(wall.getInsideBox())||living.level().dimension()!=(wall.level().dimension())){
                 living.kill();
-            }else if(living.getBoundingBox().intersects(wall.getOutsideCollisionBox())&&!living.getBoundingBox().intersects(wall.getInsideBox())){
+            }else if(living.getBoundingBox().intersects(wall.getOutsideBox())&&!living.getBoundingBox().intersects(wall.getInsideBox())){
                 List<WallOfFleshMouth> nearestMouths = new ArrayList<>();
                 for (int i = 0; i < wall.subEntities.size(); i++) {
                     WallOfFleshPart segment = wall.subEntities.get(i);
@@ -34,21 +36,25 @@ public class HorrifiedEffect extends MobEffect {
                         nearestMouths.add(mouth);
                     }
                 }
-                // 按距离排序获取最近的20个
-                nearestMouths.sort(Comparator.comparingDouble(mouth -> mouth.distanceToSqr(living)));
-                List<WallOfFleshMouth> nearest20 = nearestMouths.subList(0, Math.min(20, nearestMouths.size()));
+
+                List<WallOfFleshMouth> filteredAndSorted = nearestMouths.stream()
+                        .filter(mouth -> (living.level().dimension() != Level.NETHER
+                                || (living.level().dimension() == Level.NETHER &&  mouth.getY()<DimensionDefaults.NETHER_GENERATION_HEIGHT * 2.0 / 3.0)))
+                        .sorted(Comparator.comparingDouble(mouth -> mouth.distanceToSqr(living)))
+                        .limit(20)
+                        .toList();
 
                 WallOfFleshMouth targetMouth = null;
-                for (WallOfFleshMouth mouth : nearest20) {
+                for (WallOfFleshMouth mouth : filteredAndSorted) {
                     if (!mouth.isInWall()) {
                         targetMouth = mouth;
                         break;
                     }
                 }
 
-                // 如果没有找到合适的嘴，返回最近的嘴
-                if (targetMouth == null && !nearest20.isEmpty()) {
-                    targetMouth = nearest20.get(0);
+                // 如果没有找到合适的嘴，返回第一个嘴
+                if (targetMouth == null && !filteredAndSorted.isEmpty()) {
+                    targetMouth = filteredAndSorted.getFirst();
                 }
 
                 if (targetMouth != null) {
@@ -62,12 +68,14 @@ public class HorrifiedEffect extends MobEffect {
         return true;
     }
 
-
-    public boolean shouldApplyEffectTickThisTick(int duration, int amplifier) {
-        return duration % 20 == 0;
+    public WallOfFlesh getWallOfFlesh() {
+        return this.wall;
     }
 
     public void setWallOfFlesh(WallOfFlesh wall) {
         this.wall = wall;
+    }
+    public boolean shouldApplyEffectTickThisTick(int duration, int amplifier) {
+        return duration % 20 == 0;
     }
 }
